--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "history": "^4.7.2",
     "html5shiv": "^3.7.3",
     "image-webpack-loader": "^4.6.0",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.3",
     "postcss-loader": "^3.0.0",
